added Skyward Assault to the websites

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="script.js"></script>
   </head>
-    <body>
+    <body><!--BODY--
 	  
         <div class="container">
 	  
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-              <img src="https://newsletter-images--timmy-i-chen.repl.co/logo-light.png" alt="repl logo" />
+      <h4 id = "headingtext">AAVART SHARMA</h4>
+              <!--img src="https://newsletter-images--timmy-i-chen.repl.co/logo-light.png" alt="repl logo" /-->
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
@@ -40,7 +41,7 @@
 		 <div class="filter"></div>
 		 <section class="intro">
 		  <h3 id ="h3heading">ABOUT ME<hr></h3>
-          <p class="aboutme">Hello! I'm <b>Aavart sharma</b>, a passionate <b>game programmer</b> with a strong foundation in creating immersive gaming experiences. With a background in game development spanning over <b>2 years</b>, I've had the privilege of working on a variety of exciting projects that have allowed me to hone my skills and push the boundaries of creativity.Throughout my journey, I've successfully contributed to <b>4 distinct game projects</b>, each one presenting unique challenges and opportunities for growth. Leveraging the power of the <b>Unity game engine</b>, I've been able to bring my ideas to life, creating engaging gameplay mechanics and captivating visuals that keep players coming back for more.</p>
+          <p class="aboutme">Hello! I'm <b>Aavart sharma</b>, a passionate <b>game programmer</b> with a strong foundation in creating immersive gaming experiences. With a background in game development spanning over <b>2 years</b>, I've had the privilege of working on a variety of exciting projects that have allowed me to hone my skills and push the boundaries of creativity.Throughout my journey, I've successfully contributed to <b>5 distinct game projects</b>, each one presenting unique challenges and opportunities for growth. Leveraging the power of the <b>Unity game engine</b>, I've been able to bring my ideas to life, creating engaging gameplay mechanics and captivating visuals that keep players coming back for more.</p>
 
        <p class="aboutme">Thank you for visiting my portfolio. Feel free to explore my projects and to contact me on my social media.</p>
        
@@ -81,6 +82,8 @@
         <a href="https://aavart-sharma.itch.io/d-f-b" target="_blank"><div id = "projects-3" class="projests"><img class = "image" src = "./logo/dfb.png" alt = "p"><p>Demolished by forest of brainwashers</p></div></a>
         <hr class = "lines">
         <a href="https://aavart-sharma.itch.io/cubethon-2" target="_blank"><div id = "projects-4" class="projests"><img class = "image" src = "./logo/cube2.jpg" alt = "p"><p>Cubethon 2</p></div></a>
+        <hr class = "lines">
+        <a href="https://play.google.com/store/apps/details?id=com.aavartsharma.skywardassault&pcampaignid=web_share" target="_blank"><div id = "projects-5" class="projests"><img class = "image-Sk" src = "./logo/SA.png" alt = "p"><p>Skyward Assault</p></div></a>
 		
 		  </div>
 		  </div>
